internal/test/fixtures/chartWithExposedService/templates/services.yaml
# SPDX-FileCopyrightText: 2024 SAP SE or an SAP affiliate company and Greenhouse contributors
# SPDX-License-Identifier: Apache-2.0

apiVersion: v1
kind: Service
metadata:
  name: exposed-service
  namespace: test-org
  labels:
    greenhouse.sap/expose: "true"
spec:
  selector:
    app: some-app
  type: ClusterIP
  ports:
  - name: http
    port: 80
